# robot-universe

./: README.md
Bruce/: bruce.urdf
DigitRobot.jl-main/: digit_model.urdf
GR1T2/: GR1T2_nohand.urdf
HRP-4-Dart-Simulation-master/: CMakeLists.txt  Controller.cpp  MPCSolver.cpp  NaoWidget.cpp  NaoWorldNode.cpp  README.md  hrp4.urdf  main.cpp  manifest.xml
ManiSkill-Stompy-main/: README.md  robot.urdf
PAI-urdf/: PAI-urdf.urdf  package.xml
PF_P441A/: robot.urdf
PF_TRON1A/: robot.urdf
panda5_test/: CMakeLists.txt  package.xml  panda5.urdf
panda5_test/Materials/: rgba-0.549-0.2-0.235-1.mat
panda5_test/config/: joint_names_urdf.yaml  urdf.rviz
panda5_test/launch/: display.launch  displayp.launch
panda5_test/meshes/: LF_1_Link.STL  LF_1_Link.prefab  LF_1_Link_0.asset  LF_1_Link_1.asset  LF_1_peizhong_Link.STL  LF_2_Link.STL  LF_2_Link.prefab  LF_2_Link_0.asset  LF_2_Link_1.asset  LF_2_Link_2.asset  LF_2_peizhong_Link.STL  LF_3_Link.STL  LF_3_Link.prefab  LF_3_Link_0.asset  LF_3_peizhong_Link.STL  LF_zuduan_Link.STL  LF_zuduan_Link.prefab  LF_zuduan_Link_0.asset  LH_1_Link.STL  LH_1_Link.prefab  LH_1_Link_0.asset  LH_1_Link_1.asset  LH_1_peizhong_Link.STL  LH_2_Link.STL  LH_2_Link.prefab  LH_2_Link_0.asset  LH_2_Link_1.asset  LH_2_Link_2.asset  LH_2_peizhong_Link.STL  LH_3_Link.STL  LH_3_Link.prefab  LH_3_Link_0.asset  LH_3_peizhong_Link.STL  LH_zuduan_Link.STL  LH_zuduan_Link.prefab  LH_zuduan_Link_0.asset  RF_1_Link.STL  RF_1_Link.prefab  RF_1_Link_0.asset  RF_1_Link_1.asset  (+41 more)
panda5_test/src/: panda5.cpp
panda5_test/urdf/: panda5.urdf  urdf.csv
(+8328 files in other folders)
